David #1148 - Fixing the event banner on IE

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_eventbanner.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_eventbanner.scss
@@ -111,3 +111,13 @@
         box-shadow: 0 20px 40px 0 rgba(0,0,0,.3);
     }
 }
+
+.ie {
+    .event-banner {
+        height: 140px;
+
+        .event-banner-container {
+            height: 100%;
+        }
+    }
+}
